<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:gravity="center"
    android:paddingTop="@dimen/_80sdp"
    android:orientation="vertical">


    <TextView

        android:id="@+id/dv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/Application_developers"
        android:textColor="@color/white"
        android:textSize="@dimen/_27ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/contener_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/contener_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_mohammed"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/mohammed"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/name_mohammed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="Mohamme Badawi"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/image_mohammed"
                app:layout_constraintStart_toStartOf="@id/image_mohammed"
                app:layout_constraintTop_toBottomOf="@id/image_mohammed"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="&amp;"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_hamdy"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/hamdy"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/name_hamdy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5ssp"
                android:text="Hamdy Fathy"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/image_hamdy"
                app:layout_constraintStart_toStartOf="@id/image_hamdy"
                app:layout_constraintTop_toBottomOf="@id/image_hamdy"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/contener_image"
        app:layout_constraintStart_toStartOf="@id/contener_image"
        app:layout_constraintTop_toBottomOf="@id/contener_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/Our_channel_on_Telegram"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/link_telegram"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/icons8_telegram_app_64" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/Our_Facebook_channel"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/link_facebook"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/icons8_facebook_64" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/thanks_for_using_the_app"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>